2002-11-19  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: LilyPond-imenu-generic-re: only alphabetic chars,
	remove instructions (found in lilypond-init.el or Documentation).

	* lilypond.words: add identifiers.

	* Documentation/topdocs/INSTALL.texi: separate sections for installing
	files and adding a load-path.
	
2002-11-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.7.8 released 

	* lily/grob.cc (warning): better robustness fix.

2002-11-19 Juergen Reuter  <reuter@ipd.uka.de>

	* lily/cluster-engraver.cc: bugfix: use protected scm upon columns

	* lily/cluster-engraver.cc: stick better to variable naming
	conventions

	* lily/cluster-engraver.cc: bugfix: delay typesetting of cluster
	until stop_translation_timestep()

	* lily/cluster-engraver.cc, lily/cluster.cc: design fix: pass
	min/max coordinates to backend, but no musical info such as
	pitches

	* lily/cluster.cc: robustness fix: do not crash upon empty cluster

	* lily/grob.cc: robustness fix: warning(): do not crash if
	cause is not set

	* lily/ligature-bracket-engraver.cc, scm/grob-description.scm: use
	the much more elaborated tuplet brackets than the very naive and
	simple ligature bracket grob

2002-11-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Analysis brackets): add
	horizontal bracket doco.

	* ly/property-init.ly (setMmRestFermata): added.

	* Documentation/user/refman.itely (Multi measure rests): fermatas
	on mm rests.

	* input/regression/apply-context.ly (texidoc): new file

	* lily/parser.yy (Simple_music): \applycontext #FUNCTION allows
	code to be executed during interpretation. Possible applications:
	smart octavation, more advanced bar checks. 

	* lily/apply-context-iterator.cc: new file.

2002-11-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/new-markup.ly: new file.

	* lily/text-item.cc (text_to_molecule): new function

	* scm/new-markup.scm (lambda): new file
